// Original file: ../proto/jcopy.proto


export interface CreateRoomResponse {
  'id'?: (string);
  'roomId'?: (string);
  'textId'?: (string);
  'fileIds'?: (string)[];
}

export interface CreateRoomResponse__Output {
  'id': (string);
  'roomId': (string);
  'textId': (string);
  'fileIds': (string)[];
}
